// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Optional & Partial Validation Array of Object Validator Should valid if not required 1`] = `
Object {
  "issues": undefined,
  "value": Array [
    undefined,
    AnimalClass {
      "id": 123,
    },
  ],
}
`;

exports[`Optional & Partial Validation Array of Object Validator Should validate empty string property if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "1.id",
    },
  ],
  "value": Array [
    undefined,
    AnimalClass {
      "birthday": 2018-02-02,
      "deceased": true,
      "id": "",
      "name": "Mimi",
    },
  ],
}
`;

exports[`Optional & Partial Validation Array of Object Validator Should validate null property if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "1.id",
    },
  ],
  "value": Array [
    undefined,
    AnimalClass {
      "birthday": 2018-02-02,
      "deceased": true,
      "name": "Mimi",
    },
  ],
}
`;

exports[`Optional & Partial Validation Array of Object Validator Should validate undefined property if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "1.id",
    },
  ],
  "value": Array [
    undefined,
    AnimalClass {
      "birthday": 2018-02-02,
      "deceased": true,
      "name": "Mimi",
    },
  ],
}
`;

exports[`Optional & Partial Validation Array of Primitive Type Validation Should valid if not required 1`] = `
Object {
  "issues": undefined,
  "value": Array [
    1,
    null,
    3,
  ],
}
`;

exports[`Optional & Partial Validation Array of Primitive Type Validation Should validate empty string if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "data.1",
    },
  ],
  "value": Array [
    1,
    "",
    3,
  ],
}
`;

exports[`Optional & Partial Validation Array of Primitive Type Validation Should validate null if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "data.1",
    },
  ],
  "value": Array [
    1,
    null,
    3,
  ],
}
`;

exports[`Optional & Partial Validation Array of Primitive Type Validation Should validate undefined if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "data.1",
    },
  ],
  "value": Array [
    1,
    undefined,
    3,
  ],
}
`;

exports[`Optional & Partial Validation Decorators Should able to decorate partial validator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "kind": "Method",
      "name": "save",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Partial",
              "kind": "Override",
              "type": AnimalClass,
            },
            Object {
              "type": "tc:validator",
              "validator": Symbol(tc:partial),
            },
          ],
          "kind": "Parameter",
          "name": "data",
          "properties": Object {},
          "type": AnimalClass,
          "typeClassification": "Class",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "AnimalController",
  "properties": Array [],
  "type": AnimalController,
  "typeClassification": "Class",
}
`;

exports[`Optional & Partial Validation Decorators Should able to decorate required validator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "id",
        "properties": Object {},
        "type": Number,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "name",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "deceased",
        "properties": Object {},
        "type": Boolean,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [
          Object {
            "type": "tc:validator",
            "validator": Symbol(tc:required),
          },
        ],
        "kind": "Parameter",
        "name": "birthday",
        "properties": Object {},
        "type": Date,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "AnimalClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "id",
      "set": undefined,
      "type": Number,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "name",
      "set": undefined,
      "type": String,
    },
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "deceased",
      "set": undefined,
      "type": Boolean,
    },
    Object {
      "decorators": Array [
        Object {
          "type": "tc:validator",
          "validator": Symbol(tc:required),
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "birthday",
      "set": undefined,
      "type": Date,
    },
  ],
  "type": AnimalClass,
  "typeClassification": "Class",
}
`;

exports[`Optional & Partial Validation Nested Object Validator Should valid if provided null not required 1`] = `
Object {
  "issues": undefined,
  "value": AnimalClass {
    "birthday": 2018-02-02,
    "deceased": true,
    "id": 123,
    "name": "Mimi",
    "tag": TagClass {
      "id": 123,
    },
  },
}
`;

exports[`Optional & Partial Validation Nested Object Validator Should valid if provided undefined not required 1`] = `
Object {
  "issues": undefined,
  "value": AnimalClass {
    "id": 123,
    "tag": TagClass {
      "id": 123,
    },
  },
}
`;

exports[`Optional & Partial Validation Nested Object Validator Should validate empty string property if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "tag.id",
    },
  ],
  "value": AnimalClass {
    "birthday": 2018-02-02,
    "deceased": true,
    "id": 123,
    "name": "Mimi",
    "tag": TagClass {
      "id": "",
      "name": "The Tag",
    },
  },
}
`;

exports[`Optional & Partial Validation Nested Object Validator Should validate null property if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "tag.id",
    },
  ],
  "value": AnimalClass {
    "birthday": 2018-02-02,
    "deceased": true,
    "id": 123,
    "name": "Mimi",
    "tag": TagClass {
      "name": "The Tag",
    },
  },
}
`;

exports[`Optional & Partial Validation Nested Object Validator Should validate undefined property if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "tag.id",
    },
  ],
  "value": AnimalClass {
    "birthday": 2018-02-02,
    "deceased": true,
    "id": 123,
    "name": "Mimi",
    "tag": TagClass {
      "name": "The Tag",
    },
  },
}
`;

exports[`Optional & Partial Validation Object Validator Should valid if provided null if not required 1`] = `
Object {
  "issues": undefined,
  "value": AnimalClass {
    "id": 123,
  },
}
`;

exports[`Optional & Partial Validation Object Validator Should valid if provided undefined if not required 1`] = `
Object {
  "issues": undefined,
  "value": AnimalClass {
    "id": 123,
  },
}
`;

exports[`Optional & Partial Validation Object Validator Should validate empty string property 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "id",
    },
  ],
  "value": AnimalClass {
    "birthday": 2018-02-02,
    "deceased": true,
    "id": "",
    "name": "",
  },
}
`;

exports[`Optional & Partial Validation Object Validator Should validate null property if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "id",
    },
  ],
  "value": AnimalClass {
    "birthday": 2018-02-02,
    "deceased": true,
    "name": "Mimi",
  },
}
`;

exports[`Optional & Partial Validation Object Validator Should validate undefined property if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "id",
    },
  ],
  "value": AnimalClass {
    "birthday": 2018-02-02,
    "deceased": true,
    "name": "Mimi",
  },
}
`;

exports[`Optional & Partial Validation Partial Validation Should able to combined with required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "data",
    },
  ],
  "value": undefined,
}
`;

exports[`Optional & Partial Validation Partial Validation Should skip required validator on partial parent 1`] = `
Object {
  "issues": undefined,
  "value": AnimalClass {
    "id": 123,
  },
}
`;

exports[`Optional & Partial Validation Primitive Type Validation Should give proper info if provided wrong type of value 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Unable to convert \\"hula\\" into Number",
      ],
      "path": "data",
    },
  ],
  "value": "hula",
}
`;

exports[`Optional & Partial Validation Primitive Type Validation Should valid if not required and provided empty string 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Unable to convert \\"\\" into Number",
      ],
      "path": "data",
    },
  ],
  "value": "",
}
`;

exports[`Optional & Partial Validation Primitive Type Validation Should valid if not required and provided null 1`] = `
Object {
  "value": null,
}
`;

exports[`Optional & Partial Validation Primitive Type Validation Should valid if not required and provided undefined 1`] = `
Object {
  "value": undefined,
}
`;

exports[`Optional & Partial Validation Primitive Type Validation Should validate empty string if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "data",
    },
  ],
  "value": "",
}
`;

exports[`Optional & Partial Validation Primitive Type Validation Should validate null if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "data",
    },
  ],
  "value": null,
}
`;

exports[`Optional & Partial Validation Primitive Type Validation Should validate undefined if required 1`] = `
Object {
  "issues": Array [
    Object {
      "messages": Array [
        "Required",
      ],
      "path": "data",
    },
  ],
  "value": undefined,
}
`;
